Refatoração no backup